packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-010.ttrp
// expect: TTRP-PD-010
container c target polars """pandas
joined =
"""
